--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: required
 language: bash
 env:
   global:
-  - LIVE_SERVICE=YOUR-ECS-SERVICE-NAME
-  - LIVE_CLUSTER_NAME=YOUR-ECS-CLUSTER-NAME
-  - LIVE_APP_NAME=YOUR-ECR-API-NAME
-  - AWS_URL=YOUR-AWS-ACCOUNT-ID.dkr.ecr.YOUR-AWS-REGION.amazonaws.com
+  - LIVE_SERVICE=jeevan2
+  - LIVE_CLUSTER_NAME=jeevan1
+  - LIVE_APP_NAME=johndoe
+  - AWS_URL=037368072271.dkr.ecr.ap-south-1.amazonaws.com
 services:
 - docker
 script:
